--- a/movielist/package.json
+++ b/movielist/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "cdbreact": "^1.5.18",
